1. add batch_create_users method 2. authing support disable otp
